# CPPRestWebRoutingTemplate

./: CMakeLists.txt  README.md
src/: application.cpp  application.hpp  main.cpp  methodhandler.hpp
src/handlers/: del.cpp  del.hpp  get.cpp  get.hpp  post.cpp  post.hpp  put.cpp  put.hpp
src/routes/: index.cpp  index.hpp  route.hpp  routes.hpp
